added basic CSS

--- a/index.html
+++ b/index.html
@@ -27,17 +27,28 @@
                 
         </div>
     </section>
-    <section id="MyWork">
-        <div class="flex-row">
+    <section>
+        <div class="MyWork">
             <h2 class="section-title">
                 My Work
             </h2>
+            <ul>
+                <li>
+                    <!--Run Buddy-->
+                </li>
+                <li>
+                    <!--Horiseon Refactor-->
+                </li>
+                <li>
+                    <!--simple portfolio-->
+                </li>
+            </ul>
         </div>
         <!--links to project URLs-->
     </section>
 
-    <section id="AboutMe">
-        <div class="flex-row">
+    <section>
+        <div class="AboutMe">
             <h2 class="section-title">
                 About Me
             </h2>
@@ -45,8 +56,8 @@
         </div>
     </section>
 
-    <section id="ContactMe">
-        <div class="flex-row">
+    <section>
+        <div class="ContactMe">
             <h2 class="section-title">
                 Contact Me
             </h2>
